# lib/api-spec/openapi.yaml
@@ -934,6 +934,8 @@ components:
           type: boolean
         siteName:
           type: string
+        mealHighlight:
+          type: string
         tagline:
           type: string
         heroHeading:
@@ -1009,6 +1011,8 @@ components:
       type: object
       properties:
         siteName:
+          type: string
+        mealHighlight:
           type: string
         tagline:
           type: string
